--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,141 @@
 ---
-
+import Base from '@/layout/Base.astro'
+import { PixelartPlantRect } from '@/components/preact/plant-pixelart'
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Base>
+    <h1 slot="header-title">Provaaaaa</h1>
+    <main class="content">
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium maxime ad optio itaque dignissimos hic
+            blanditiis facilis sed! Eaque nihil aliquam deleniti eligendi eveniet dolores nulla, quas at voluptatibus
+            voluptatum quae repudiandae obcaecati. Molestiae voluptate, qui recusandae nam dolor perferendis excepturi,
+            reiciendis ipsum cumque, sapiente blanditiis quasi architecto illo fugiat?
+        </p>
+        <h2>Altro sottotitolo</h2>
+        <p>
+            Magni quos illum itaque nisi vitae accusamus provident veniam, quaerat eveniet omnis officiis laboriosam,
+            aliquam quas temporibus corporis eos mollitia ipsam? Iusto tempore dolore laudantium blanditiis, omnis
+            maxime nam optio quod accusamus doloribus totam. Iure recusandae, mollitia nulla doloremque neque ipsa
+            dolores similique distinctio. Obcaecati est beatae libero sunt inventore?
+        </p>
+        <h3>Altro sottotitolo</h3>
+        <p>
+            Necessitatibus amet at iure velit reprehenderit, placeat quibusdam accusantium harum, natus delectus,
+            corrupti consequatur fugit! Consequuntur, eaque reiciendis quibusdam consectetur ratione itaque perspiciatis
+            laudantium libero repellat error, officia cupiditate accusamus perferendis sunt inventore, magni animi nam
+            iusto ut laboriosam corporis voluptas commodi culpa? Pariatur ducimus doloremque ullam at culpa quaerat?
+        </p>
+        <h3>Altro sottotitolo</h3>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <PixelartPlantRect client:visible />
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium maxime ad optio itaque dignissimos hic
+            blanditiis facilis sed! Eaque nihil aliquam deleniti eligendi eveniet dolores nulla, quas at voluptatibus
+            voluptatum quae repudiandae obcaecati. Molestiae voluptate, qui recusandae nam dolor perferendis excepturi,
+            reiciendis ipsum cumque, sapiente blanditiis quasi architecto illo fugiat?
+        </p>
+        <h2>Altro sottotitolo</h2>
+        <p>
+            Magni quos illum itaque nisi vitae accusamus provident veniam, quaerat eveniet omnis officiis laboriosam,
+            aliquam quas temporibus corporis eos mollitia ipsam? Iusto tempore dolore laudantium blanditiis, omnis
+            maxime nam optio quod accusamus doloribus totam. Iure recusandae, mollitia nulla doloremque neque ipsa
+            dolores similique distinctio. Obcaecati est beatae libero sunt inventore?
+        </p>
+        <h3>Altro sottotitolo</h3>
+        <p>
+            Necessitatibus amet at iure velit reprehenderit, placeat quibusdam accusantium harum, natus delectus,
+            corrupti consequatur fugit! Consequuntur, eaque reiciendis quibusdam consectetur ratione itaque perspiciatis
+            laudantium libero repellat error, officia cupiditate accusamus perferendis sunt inventore, magni animi nam
+            iusto ut laboriosam corporis voluptas commodi culpa? Pariatur ducimus doloremque ullam at culpa quaerat?
+        </p>
+        <h3>Altro sottotitolo</h3>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <PixelartPlantRect client:visible />
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium maxime ad optio itaque dignissimos hic
+            blanditiis facilis sed! Eaque nihil aliquam deleniti eligendi eveniet dolores nulla, quas at voluptatibus
+            voluptatum quae repudiandae obcaecati. Molestiae voluptate, qui recusandae nam dolor perferendis excepturi,
+            reiciendis ipsum cumque, sapiente blanditiis quasi architecto illo fugiat?
+        </p>
+        <h2>Altro sottotitolo</h2>
+        <p>
+            Magni quos illum itaque nisi vitae accusamus provident veniam, quaerat eveniet omnis officiis laboriosam,
+            aliquam quas temporibus corporis eos mollitia ipsam? Iusto tempore dolore laudantium blanditiis, omnis
+            maxime nam optio quod accusamus doloribus totam. Iure recusandae, mollitia nulla doloremque neque ipsa
+            dolores similique distinctio. Obcaecati est beatae libero sunt inventore?
+        </p>
+        <h3>Altro sottotitolo</h3>
+        <p>
+            Necessitatibus amet at iure velit reprehenderit, placeat quibusdam accusantium harum, natus delectus,
+            corrupti consequatur fugit! Consequuntur, eaque reiciendis quibusdam consectetur ratione itaque perspiciatis
+            laudantium libero repellat error, officia cupiditate accusamus perferendis sunt inventore, magni animi nam
+            iusto ut laboriosam corporis voluptas commodi culpa? Pariatur ducimus doloremque ullam at culpa quaerat?
+        </p>
+        <h3>Altro sottotitolo</h3>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+        <p>
+            Asperiores sint odit saepe doloremque recusandae reiciendis repudiandae molestiae est dolores ipsum
+            exercitationem dolorum autem libero placeat, fugiat harum maiores eos pariatur impedit dicta explicabo!
+            Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
+            id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
+        </p>
+    </main>
+
+    <!-- <div class="art" style="width: 100%; max-width: 52rem; height: 4rem;">
+        <PixelartPlantRect client:visible />
+    </div>
+
+    <main></main> -->
+
+    <!-- <script>
+        import { decorateHeadings } from '@/components/preact/plant-pixelart'
+
+        decorateHeadings()
+    </script> -->
+</Base>
