--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -23,7 +23,7 @@ const { Content } = await render(post)
 
 <Base>
     <h1 slot="header-title">{post.data.title}</h1>
-    <main class="content">
+    <div class="content">
         <Content />
-    </main>
+    </div>
 </Base>
