--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import { PixelartPlantRect } from '@/components/preact/plant-pixelart'
             Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
             id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
         </p>
-        <PixelartPlantRect client:visible />
+        <PixelartPlantRect client:visible height={100} />
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium maxime ad optio itaque dignissimos hic
             blanditiis facilis sed! Eaque nihil aliquam deleniti eligendi eveniet dolores nulla, quas at voluptatibus
@@ -85,7 +85,7 @@ import { PixelartPlantRect } from '@/components/preact/plant-pixelart'
             Eveniet obcaecati ab tenetur exercitationem fugit iure deserunt aliquid neque expedita maxime in doloribus
             id, a voluptate, quae aspernatur, nostrum labore ratione et! Rerum, harum?
         </p>
-        <PixelartPlantRect client:visible />
+        <PixelartPlantRect client:visible height={100} />
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium maxime ad optio itaque dignissimos hic
             blanditiis facilis sed! Eaque nihil aliquam deleniti eligendi eveniet dolores nulla, quas at voluptatibus
